--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Content/Site.css
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* Edit Text Box */
+#Description,
+#item_Description
+{
+    margin: 0px !important;
+    width: 286px !important; 
+    height:100px !important;
+}
+
+/*Change jumbotron feature for index*/
+.jumbotron {
+    margin-top: 30px;
+    background-color: #9ffbdc !important;
+}
+
+/*Change menu bar color*/
+.navbar-inverse {
+    background-color:#020b5b !important;
+}
