--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Assign.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Assign.cshtml
@@ -1,16 +1,16 @@
 ﻿@model SensorDataModel.Models.Project
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Assign people to projects";
 }
 
-<h2>Edit</h2>
+<h2>Assign people to projects</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Project</h4>
         <hr />
@@ -21,7 +21,6 @@
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -32,6 +31,17 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+
+
+
+            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayFor(model => model.Description)
+
+
+
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
