User identities and roles setup except delete - need to run update-database on your machine maybe

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,21 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (User.IsInRole("Student"))
+                    {
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                    }
+
+                    @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
+                    {
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("UserGroup", "Index", "UserGroups")</li>
+                        <li>@Html.ActionLink("Project", "Index", "Projects")</li>
+                        <li>@Html.ActionLink("User", "Index", "Users")</li>
+                        
+                    }
+                    
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
