user crud etc working with no validation

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("UserGroup", "Index", "UserGroups")</li>
                         <li>@Html.ActionLink("Project", "Index", "Projects")</li>
-                        <li>@Html.ActionLink("User", "Index", "Users")</li>
+                        <li>@Html.ActionLink("Users", "Index", "Users")</li>
                         <li>@Html.ActionLink("Charts", "Index", "Charts")</li>
 
 
