--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Details.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Details.cshtml
@@ -101,6 +101,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Delete User", "DeleteConfirmed", new { id = Model.UserName }) |
+    @*@Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to List", "Index")
 </p>
