--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Users/Index.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayNameFor(model => model.Roles)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
+            @Html.DisplayNameFor(model => model.IsActive)
         </th>
         <th></th>
     </tr>
@@ -61,12 +61,12 @@
                 @Html.DisplayFor(modelItem => item.Roles)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LockoutEnabled)
+                @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("LockOut", "LockOut", new { id = item.Id }) |
+                @*@Html.ActionLink("LockOut", "LockOut", new { id = item.Id }) |*@
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
         </tr>
