--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Home/Index.cshtml
@@ -1,9 +1,72 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<script src="~/Scripts/slideShow.js"></script>
+<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
+<style>
+    .mySlides {
+        display: none;
+    }
+    .w3-left, .w3-right, .w3-badge {
+        cursor: pointer;
+    }
+    .w3-badge {
+        height: 13px;
+        width: 13px;
+        padding: 0;
+    }
+</style>
+
+@section scripts {
+<script type="text/javascript">
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function currentDiv(n) {
+  showDivs(slideIndex = n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length} ;
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+     dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
+    }
 
 <div class="jumbotron" style="text-align: center">
-    <img src="~/image/bcit_full_rgb_h.jpg" />
+    <div class="w3-content w3-display-container" style="max-width:800px">
+        <img class="mySlides" src="~/image/BCIT-1.jpg" style="width:100%">
+        <img class="mySlides" src="~/image/BCIT-2.jpg" style="width:100%">
+        <img class="mySlides" src="~/image/BCIT-3.jpg" style="width:100%">
+        <img class="mySlides" src="~/image/BCIT-4.jpg" style="width:100%">
+        <img class="mySlides" src="~/image/BCIT-5.jpg" style="width:100%">
+        <div class="w3-center w3-section w3-large w3-text-white w3-display-bottomleft" style="width:100%">
+            <div class="w3-left w3-padding-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+            <div class="w3-right w3-padding-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+            <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(5)"></span>
+        </div>
+    </div>
+    <!--img src="~/image/bcit_full_rgb_h.jpg" /-->
     <h2>BCIT School of Construction (BSCE) Web App</h2>
     <h3>Information about the Application</h3>
     <h4>
