--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Assign.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Assign.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SensorDataModel.Models.Project
 
 @{
-    ViewBag.Title = "Assign people to projects";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Assign people to projects</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -16,31 +16,30 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProjectId)
-        <!--
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.Name)
             </div>
-        </div>-->
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                @Html.DisplayFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.Description)
             </div>
         </div>
 
-
-
-            @Html.DisplayNameFor(model => model.Name)
-            @Html.DisplayFor(model => model.Name)
-            @Html.DisplayNameFor(model => model.Description)
-            @Html.DisplayFor(model => model.Description)
-
-
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
 
         <div class="form-group">
