--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
@@ -19,6 +19,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UserName)
+        </th>
         <th></th>
     </tr>
 
@@ -28,7 +31,10 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.TextAreaFor(modelItem => item.Description)
+            @Html.DisplayFor(model => item.Description, new { htmlAttributes = new { @class = "form-control" } })
+        </td>
+        <td>
+            @Html.DisplayFor(model => item.UserName, new { htmlAttributes = new { @class = "form-control" } })
         </td>
         <td>
             <input type="submit" value="Assign" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Assign"  , "Projects", new { id=item.ProjectId })'">
