--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Delete.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SensorDataModel.Models.UserGroup
+﻿@model SensorDataModel.Models.SensorProject
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UserGroup</h4>
+    <h4>SensorProject</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.StudentId)
+            @Html.DisplayNameFor(model => model.SensorProjectName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StudentId)
+            @Html.DisplayFor(model => model.SensorProjectName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CustomGroupId)
+            @Html.DisplayNameFor(model => model.SensorProjectType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CustomGroupId)
+            @Html.DisplayFor(model => model.SensorProjectType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SensorName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SensorName)
         </dd>
 
     </dl>
