--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignUsersToProjects.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignUsersToProjects.cshtml
@@ -18,18 +18,18 @@
         @Html.HiddenFor(model => model.ProjectId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProjectName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HiddenFor(model => model.Name)
+                @Html.DisplayFor(model => model.ProjectName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ProjectName)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProjectDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HiddenFor(model => model.Description)
+                @Html.DisplayFor(model => model.ProjectDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ProjectDescription)
             </div>
         </div>
 
