--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
@@ -11,21 +11,37 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ProjectName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.ProjectName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.ProjectDescription)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.ProjectDescription)
+        </dd>
+        
+        <dt>
+            @ViewBag.AssignedUser
+        </dt>
+        <dd>
+            @ViewBag.AssignedUserValue
         </dd>
 
+        <dt>
+            @ViewBag.AssignedSensors
+        </dt>
+        <dd>
+            @foreach (var i in ViewBag.SensorList)
+            {
+                @i<br/>
+            }
+        </dd>
     </dl>
 </div>
 <p>
