--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
@@ -14,31 +14,42 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.ProjectName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.ProjectDescription)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
-        <th></th>
+        <th>Details</th>
+        <th>Users</th>
+        <th>Sensors</th>
+        <th>Project</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.ProjectName)
         </td>
         <td>
-            @Html.DisplayFor(model => item.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.DisplayFor(model => item.ProjectDescription, new { htmlAttributes = new { @class = "form-control" } })
         </td>
         <td>
             @Html.DisplayFor(model => item.UserName, new { htmlAttributes = new { @class = "form-control" } })
         </td>
         <td>
+            <input type="submit" value="Details" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Details"  , "Projects", new { id=item.ProjectId })'">
+        </td>
+        <td>
             <input type="submit" value="Assign Users" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignUsersToProjects"  , "Projects", new { id=item.ProjectId })'">
+        </td>
+        <td>
             <input type="submit" value="Assign Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignSensorsToProjects"  , "Projects", new { id=item.ProjectId })'">
+            <input type="submit" value="Remove Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("RemoveSensorsFromProjects"  , "Projects", new { id=item.ProjectId })'">
+        </td>
+        <td>
             <input type="submit" value="Edit" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Edit"  , "Projects", new { id=item.ProjectId })'">
             <input type="submit" value="Remove" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Delete", "Projects", new { id=item.ProjectId })'">
         </td>
