--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SensorProjects/Delete.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SensorProjects/Delete.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to Remove this Sensor from Project?</h3>
 <div>
-    <h4>SensorProject</h4>
+    <h4>Sensor Assigned Project</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,7 +43,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "RemoveSensorsFromProjects", "Projects", new { id = ViewBag.ProjectId }, null)
         </div>
     }
 </div>
