--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
@@ -22,10 +22,11 @@
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
-        <th>Details</th>
-        <th>Users</th>
-        <th>Sensors</th>
-        <th>Project</th>
+        <th>Project Reports</th>
+        <th>Project Details</th>
+        @*<th>Users</th>
+        <th>Sensors</th>*@
+        <th>Administration</th>
     </tr>
 
 @foreach (var item in Model) {
@@ -40,15 +41,18 @@
             @Html.DisplayFor(model => item.UserName, new { htmlAttributes = new { @class = "form-control" } })
         </td>
         <td>
-            <input type="submit" value="Details" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Details"  , "Projects", new { id=item.ProjectId })'">
+            <input type="submit" value="Report" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Reports"  , "Reports", new { id=item.ProjectId })'">
         </td>
         <td>
+            <input type="submit" value="Details" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Details"  , "Projects", new { id=item.ProjectId })'">
+        </td>
+        @*<td>
             <input type="submit" value="Assign Users" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignUsersToProjects"  , "Projects", new { id=item.ProjectId })'">
         </td>
         <td>
             <input type="submit" value="Assign Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignSensorsToProjects"  , "Projects", new { id=item.ProjectId })'">
             <input type="submit" value="Remove Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("RemoveSensorsFromProjects"  , "Projects", new { id=item.ProjectId })'">
-        </td>
+        </td>*@
         <td>
             <input type="submit" value="Edit" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Edit"  , "Projects", new { id=item.ProjectId })'">
             <input type="submit" value="Remove" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Delete", "Projects", new { id=item.ProjectId })'">
