--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SavedReports/Delete.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/SavedReports/Delete.cshtml
@@ -1,30 +1,23 @@
-﻿@model SensorDataModel.Models.CustomGroup
+﻿@model SensorDataModel.Models.SavedReport
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Custom Group: @ViewBag.CustGroupName</h4>
+    <h4>SavedReport</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.ReportName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CustomGroupName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CustomGroupName)
+            @Html.DisplayFor(model => model.ReportName)
         </dd>
 
         <dt>
@@ -36,11 +29,27 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SensorName)
+            @Html.DisplayNameFor(model => model.CustomGroupName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SensorName)
+            @Html.DisplayFor(model => model.CustomGroupName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BeginDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BeginDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EndDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EndDate)
         </dd>
 
     </dl>
@@ -50,8 +59,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @*@Html.ActionLink("Back to Project Details", "Details", "Projects", new { id = ViewBag.ProjectId }, null)*@
-            @Html.ActionLink("Back to Project Details", "Details", "Projects", new { id = @ViewBag.ProjectId }, null)
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
