--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
@@ -44,8 +44,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SensorProject.SensorProjectType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SensorProject.SensorProjectType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SensorProject.SensorProjectType)
+                @*@Html.EditorFor(model => model.SensorProject.SensorProjectType, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.DropDownList("SelectedType", (IEnumerable<SelectListItem>)ViewBag.ProjectList, htmlAttributes: new { @class = "form-control" })
+                @*@Html.ValidationMessageFor(model => model.SensorProject.SensorProjectType)*@
             </div>
         </div>
 
