--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Reports.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Reports/Reports.cshtml
@@ -1,8 +1,53 @@
 ﻿@model IEnumerable<SensorDataModel.Models.Sensor>
+@*@using SensorDataModel.Models;*@
+@*@model IEnumerable<SensorDataModel.Models.CustomGroup>*@
 
 @{
     ViewBag.Title = "Reports";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    
+}
+
+@section scripts {
+    @*<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>*@
+
+    <script type="text/javascript">
+        
+        $("input[name='SelectedCG']").on('change', function () {
+            $.ajax({
+                url: '@Url.Action("FilterReports", "Reports")',
+                data: { cgName: $("input[name='SelectedCG']:checked").val() },
+                type: 'POST',
+                success: function (data) {
+                    $('#reportTable').html(data);
+                    $('#reportTable').show();
+                },
+                error: function(xhr, status, error)
+                {
+                    alert(xhr.responseText);
+                }
+            })
+        });
+            @*.ajax({
+                type: 'POST',
+                url: '@Url.Action("FilterReports", "Reports")',
+                cache: false,
+                data: $("input[name='SelectedCG']:checked").val(),
+                success: function (data) {
+                    if (data.exists) {
+                        target.load(url, data);
+                        $("#yourDivId").load("/Home/Forms/ #" + $('#myDropDownList option:selected').val())
+
+                    }
+                    else {
+                        alert("error with post");
+                    }
+                },
+                error: function (req) {
+
+                }*@
+
+    </script>
 }
 
 <h2>Report for @ViewBag.ProjectName</h2>
@@ -11,31 +56,21 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.SensorName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SensorValue)
+            Custom Groups
         </th>
     </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-            @*<td>
-                    @Html.DisplayFor(modelItem => item.SensorName)
-                </td>*@
-            <td>
-                @Html.DisplayFor(model => item.SensorName, new { htmlAttributes = new { @class = "form-control" } })
-            </td>
-            <td>
-                @Html.DisplayFor(model => item.DateTime, new { htmlAttributes = new { @class = "form-control" } })
-            </td>
-            <td>
-                @Html.DisplayFor(model => item.SensorValue, new { htmlAttributes = new { @class = "form-control" } })
-            </td>
-        </tr>
-    }
+    <tr>
+        <td>
+            @foreach (var i in ViewBag.CustomGroups)
+            {
+                string val = i;
+                @Html.RadioButton("SelectedCG", val)
+                <span>@val</span>
+            }
+        </td>
+    </tr>
 </table>
+
+<div id="reportTable"></div>
+
+
