fixed add sensor to project page (still working on making this page usable). added security checks in a bunch of methods and changed project details page slightly to make it look more organized

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignUsersToProjects.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignUsersToProjects.cshtml
@@ -4,16 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
+<h2>Assign Users</h2>
+<hr />
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Project</h4>
-        <hr />
+    <div class="form-horizontal">          
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProjectId)
 
@@ -51,7 +49,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Project Details", "Details", "Projects", new { id = ViewBag.projectId }, null)
 </div>
 
 @section Scripts {
