--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
@@ -1,4 +1,6 @@
-﻿@model SensorDataModel.Models.GroupProject
+﻿@*@model SensorDataModel.Models.GroupProject*@
+
+@model SensorDataModel.Models.SensorProject
 
 @{
     ViewBag.Title = "Assign Sensors to Projects";
@@ -15,46 +17,36 @@
         <h4>Project</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Projects.ProjectId)
+        @Html.HiddenFor(model => model.SensorProjectId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Projects.ProjectName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SensorProjectName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10" id="ProjectName">
-                @Html.DisplayFor(model => model.Projects.ProjectName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HiddenFor(model => model.Projects.ProjectName)
+                @Html.DisplayFor(model => model.SensorProjectName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.SensorProjectName)
+                @Html.ValidationMessageFor(model => model.SensorProjectName)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Projects.ProjectDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            "Project Description", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DisplayFor(model => model.Projects.ProjectDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HiddenFor(model => model.Projects.ProjectDescription)
+                @ViewBag.projectDesc;
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SensorProject.SensorProjectName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SensorProjectType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SensorProject.SensorProjectName, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.Name } })
-                @Html.ValidationMessageFor(model => model.SensorProject.SensorProjectName)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SensorProject.SensorProjectType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.SensorProject.SensorProjectType, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.DropDownList("SelectedType", (IEnumerable<SelectListItem>)ViewBag.ProjectList, htmlAttributes: new { @class = "form-control" })
-                @*@Html.ValidationMessageFor(model => model.SensorProject.SensorProjectType)*@
+                @Html.HiddenFor(model => model.SensorProjectType)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SensorProject.SensorName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SensorName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SensorProject.SensorName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SensorProject.SensorName)
+                @Html.EditorFor(model => model.SensorName, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
 
@@ -68,16 +60,6 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Project Details", "Details", "Projects", new { id = ViewBag.projectId }, null)
 </div>
 
-<script type="text/javascript">
-    //Read ProjectName from Project table, after that create Project Name to save the SensorProject table
-    var ProjectName = document.getElementById("Projects_ProjectName").value;
-    document.getElementById("SensorProject_SensorProjectName").value = ProjectName;
-</script>
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
