--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Index.cshtml
@@ -7,8 +7,10 @@
 <h2>Projects</h2>
 
 <p>
-    <input type="submit" value="Create New" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Create", "Projects")'" >
-
+    @if (User.IsInRole("Admin"))
+    {
+        <input type="submit" value="Create New" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Create", "Projects")'">
+    }
 </p>
 
 <table class="table">
@@ -24,41 +26,39 @@
         </th>
         <th>Project Reports</th>
         <th>Project Details</th>
-        @*<th>Users</th>
-        <th>Sensors</th>*@
-        <th>Administration</th>
+        @if (User.IsInRole("Admin"))
+        {
+            <th>Administration</th>
+        }
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProjectName)
-        </td>
-        <td>
-            @Html.DisplayFor(model => item.ProjectDescription, new { htmlAttributes = new { @class = "form-control" } })
-        </td>
-        <td>
-            @Html.DisplayFor(model => item.UserName, new { htmlAttributes = new { @class = "form-control" } })
-        </td>
-        <td>
-            <input type="submit" value="Report" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Reports"  , "Reports", new { id=item.ProjectId })'">
-        </td>
-        <td>
-            <input type="submit" value="Details" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Details"  , "Projects", new { id=item.ProjectId })'">
-        </td>
-        @*<td>
-            <input type="submit" value="Assign Users" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignUsersToProjects"  , "Projects", new { id=item.ProjectId })'">
-        </td>
-        <td>
-            <input type="submit" value="Assign Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignSensorsToProjects"  , "Projects", new { id=item.ProjectId })'">
-            <input type="submit" value="Remove Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("RemoveSensorsFromProjects"  , "Projects", new { id=item.ProjectId })'">
-        </td>*@
-        <td>
-            <input type="submit" value="Edit" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Edit"  , "Projects", new { id=item.ProjectId })'">
-            <input type="submit" value="Remove" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Delete", "Projects", new { id=item.ProjectId })'">
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProjectName)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.ProjectDescription, new { htmlAttributes = new { @class = "form-control" } })
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.UserName, new { htmlAttributes = new { @class = "form-control" } })
+            </td>
+            <td>
+                <input type="submit" value="Report" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Reports"  , "Reports", new { id=item.ProjectId })'">
+            </td>
+            <td>
+                <input type="submit" value="Details" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Details"  , "Projects", new { id=item.ProjectId })'">
+            </td>
+            @if (User.IsInRole("Admin"))
+            {
+                <td>
+                    <input type="submit" value="Edit" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Edit"  , "Projects", new { id=item.ProjectId })'">
+                    <input type="submit" value="Remove" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Delete", "Projects", new { id=item.ProjectId })'">
+                </td>
+            }
+        </tr>
+    }
 
 </table>
 
