--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/Details.cshtml
@@ -32,14 +32,14 @@
                 Users
             </dt>
             <dd>
-                <input type="submit" value="Assign Users" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignUsersToProjects", "Projects", new { id = Model.ProjectId })'">
+                <input type="submit" value="Assign Users" class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AssignUsersToProjects", "Projects", new { id = Model.ProjectId })'">
             </dd>
             <dt>
                 Sensors
             </dt>
             <dd>
-                <input type="submit" value="Assign Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("AssignSensorsToProjects", "Projects", new { id = Model.ProjectId })'">
-                <input type="submit" value="Remove Sensors" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("RemoveSensorsFromProjects", "Projects", new { id = Model.ProjectId })'">
+                <input type="submit" value="Assign Sensors" class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("AssignSensorsToProjects", "Projects", new { id = Model.ProjectId })'">
+                <input type="submit" value="Remove Sensors" class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("RemoveSensorsFromProjects", "Projects", new { id = Model.ProjectId })'">
             </dd>
         }
 
@@ -54,7 +54,7 @@
             Add Custom Group
         </dt>
         <dd>
-            <input type="submit" value="Add" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Create", "CustomGroups", new { id=Model.ProjectId })'">
+            <input type="submit" value="Add" class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("Create", "CustomGroups", new { id=Model.ProjectId })'">
         </dd>
         
         <dt>
@@ -76,7 +76,7 @@
                             @item.SensorName
                         </td>
                         <td>
-                            <input type="submit" value="Remove" class="btn btn-primary btn-large" onclick="location.href='@Url.Action("Delete", "CustomGroups", new { id=item.CustomGroupId})'">
+                            <input type="submit" value="Remove" class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("Delete", "CustomGroups", new { id=item.CustomGroupId})'">
                         </td>
                     </tr>
                 }
