--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/Index.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Charts/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@*@model IEnumerable<SensorDataModel.Models.Sensor>
+@{
     ViewBag.Title = "Charts";
 }
 
@@ -431,4 +432,4 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
