fixed export button - check output i think its wrong

--- a/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
+++ b/COMP4900_SOCE_WebApp/COMP4900_SOCE_WebApp/Views/Projects/AssignSensorsToProjects.cshtml
@@ -30,9 +30,11 @@
     <script type="text/javascript">
         $(function () {
             $('.special').click(function () {
-                var value = $(this).text();
-                var input = $('#showSensor');
-                $(input).val(value);
+                var msg = "test";
+                alert(msg);
+                //var value = $(this).text();
+                //var input = $('#showSensor');
+                //$(input).val(value);
                 //alert(value + " " + input);
                 //$("#SensorName").val($(this).attr('value'));
             });
